<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="foundation_confirm">确认</string>
    <string name="foundation_cancel">取消</string>
    <string name="foundation_retry">重试</string>
    <string name="foundation_empty_title">暂无数据</string>
    <string name="foundation_empty_description">请稍后再试</string>
    <string name="foundation_error_title">加载失败</string>
    <string name="foundation_error_description">请检查网络后重试</string>
    <string name="foundation_show_password">显示密码</string>
    <string name="foundation_hide_password">隐藏密码</string>
    <string name="foundation_toast_success">操作成功</string>
    <string name="foundation_toast_error">操作失败</string>
    <string name="foundation_toast_info">请稍候</string>
    <string name="foundation_toast_message">Toast message</string>
    <string name="foundation_keypad_digit_0">0</string>
    <string name="foundation_keypad_digit_1">1</string>
    <string name="foundation_keypad_digit_2">2</string>
    <string name="foundation_keypad_digit_3">3</string>
    <string name="foundation_keypad_digit_4">4</string>
    <string name="foundation_keypad_digit_5">5</string>
    <string name="foundation_keypad_digit_6">6</string>
    <string name="foundation_keypad_digit_7">7</string>
    <string name="foundation_keypad_digit_8">8</string>
    <string name="foundation_keypad_digit_9">9</string>
    <string name="foundation_keypad_delete">删除</string>
    <string name="foundation_keypad_delete_symbol">⌫</string>
    <string name="foundation_keypad_done">完成</string>
    <string name="foundation_picker_confirm">确定</string>
    <string name="foundation_picker_cancel">取消</string>
    <string name="foundation_date_range_title">选择时间范围</string>
    <string name="foundation_date_range_incomplete">请选择开始和结束日期</string>
    <string name="foundation_date_time_title">选择时间</string>
    <string name="foundation_calendar_prev_year">上一年</string>
    <string name="foundation_calendar_prev_month">上一月</string>
    <string name="foundation_calendar_next_month">下一月</string>
    <string name="foundation_calendar_next_year">下一年</string>
    <string name="foundation_calendar_monday">一</string>
    <string name="foundation_calendar_tuesday">二</string>
    <string name="foundation_calendar_wednesday">三</string>
    <string name="foundation_calendar_thursday">四</string>
    <string name="foundation_calendar_friday">五</string>
    <string name="foundation_calendar_saturday">六</string>
    <string name="foundation_calendar_sunday">日</string>
    <string name="foundation_permission_title">权限申请</string>
    <string name="foundation_permission_agreement_tips">需要您同意以下权限才能正常使用</string>
    <string name="foundation_permission_agree">同意</string>
    <string name="foundation_permission_cancel">取消</string>
    <string name="foundation_permission_notify_go_system_setting">您需要去应用程序设置当中手动开启权限</string>
    <string name="foundation_permission_go_setting">去设置</string>
    <string name="foundation_permission_denied">您拒绝了如下权限：%1$s</string>
</resources>
